<resources>
    <string name="app_name">Nile Fortune</string>
    <string name="tv_loading">Loading…</string>
    <string name="header_sign_up">Sign up to save your results</string>
    <string name="btn_continue">Continue</string>
    <string name="rb_anonymous">anonymous</string>
    <string name="rb_phone">phone</string>
    <string name="header_enter_phone">Enter phone to save your results</string>
    <string name="btn_spin">Spin</string>
    <string name="content_description_logo">Logo</string>
    <string name="box_header_balance">Balance</string>
    <string name="box_header_win">Win</string>
    <string name="menu_btn_return_description">Return</string>
    <string name="tv_return_to_menu"><u>Return to menu</u></string>
    <string name="tv_settings_header">Settings</string>
    <string name="btn_games">Games</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_privacy">Privacy</string>
    <string name="menu_btn_logout_description">Logout</string>
    <string name="btn_game_1_description">Game 1</string>
    <string name="btn_game_2_description">Game 2</string>
    <string name="setting_music">Music</string>
    <string name="setting_vibration">Vibration</string>
    <string name="btn_decrease_description">Decrease</string>
    <string name="btn_increase_description">Increase</string>
    <string name="tv_bonus_game">Bonus game</string>
    <string name="wheel_description">Wheel</string>
    <string name="pointer_description">Pointer</string>
    <string name="slot_image">Slot image</string>
    <string name="winner_message">YOU WON!!!</string>
    <string name="message_did_good">You did good</string>
    <string name="message_lost">You lost. Better luck next time</string>
    <string name="message_excellent">Excellent!</string>
    <string name="message_not_enough_money">You don\'t have enough money</string>
    <string name="minimal_bet_message">Minimal bet is 20</string>
</resources>