<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="36dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuFragment">

    <FrameLayout
        android:id="@+id/fl_games"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/base_btn_ripple"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/secondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_games"
            android:textColor="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_settings"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/base_btn_ripple"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/secondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_settings"
            android:textColor="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_privacy"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/base_btn_ripple"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/secondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_privacy"
            android:textColor="@color/black" />

    </FrameLayout>


</LinearLayout>