<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_game_bg"
    tools:context=".FirstGameActivity">

    <ImageButton
        android:id="@+id/btn_return"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_back_ripple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tv_return_to_menu" />

    <LinearLayout
        android:id="@+id/frameLayout2"
        android:layout_width="116dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/statistics_box"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
        app:layout_constraintStart_toEndOf="@+id/btn_return"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/boxHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/box_header_balance"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            style="@style/secondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:text="249793" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="116dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/statistics_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/boxHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/box_header_win"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            style="@style/secondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:text="249793" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_logo"
            android:src="@drawable/game1_logo"
            app:layout_constraintBottom_toTopOf="@+id/ll_bet_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/ll_bet_panel"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/fl_spin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_decrease_ripple"
                android:contentDescription="@string/btn_decrease_description" />

            <FrameLayout
                android:id="@+id/fl_bet_box"
                android:layout_width="148dp"
                android:layout_height="56dp"
                android:background="@drawable/bet_box"
                app:layout_constraintBottom_toTopOf="@+id/fl_spin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    style="@style/secondaryTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:text="249793" />

            </FrameLayout>

            <ImageButton
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_increase_ripple"
                android:contentDescription="@string/btn_increase_description" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/fl_spin"
            android:layout_width="148dp"
            android:layout_height="56dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/btn_spin_ripple"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/secondaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_spin"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="254dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/game_space"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>