<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstGameActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bonus_game_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/btn_return"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_back_ripple"
        android:contentDescription="@string/tv_return_to_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_settings_header"
        style="@style/baseTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="72dp"
        android:text="@string/tv_bonus_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_return"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_header" >

        <LinearLayout
            android:id="@+id/frameLayout2"
            android:layout_width="116dp"
            android:layout_height="56dp"
            android:background="@drawable/statistics_box"
            android:layout_marginEnd="28dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/imageCircle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_header">

            <TextView
                style="@style/boxHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/box_header_balance"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                style="@style/secondaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:text="249793" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="116dp"
            android:layout_height="56dp"
            android:background="@drawable/statistics_box"
            android:gravity="center"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/imageCircle"
            app:layout_constraintStart_toEndOf="@+id/frameLayout2"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_header"
            app:layout_constraintVertical_bias="0.494">

            <TextView
                style="@style/boxHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/box_header_win"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                style="@style/secondaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:text="249793" />

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/imagePointer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/pointer_circle"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="220dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageCircle"
      />

    <ImageView
        android:id="@+id/imageCircle"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/wheel_description"
        android:src="@drawable/bonus_game_wheel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_header" />

    <FrameLayout
        android:id="@+id/fl_spin"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:background="@drawable/btn_spin_ripple"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCircle">

        <TextView
            style="@style/secondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_spin"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>